--- a/index.html
+++ b/index.html
@@ -585,5 +585,6 @@
 </body>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9984870413484810"
     crossorigin="anonymous"></script>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9984870413484810"
+     crossorigin="anonymous"></script>
 </html>
