--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>多功能在线工具集 - 一站式开发工具平台</title>
     <meta name="description" content="提供JSON格式化、代码压缩、图片转换、转义工具等多种在线开发工具，一站式解决开发需求">
     <meta name="keywords" content="在线工具,JSON格式化,代码压缩,图片转换,转义工具,开发工具">
+    <meta name="google-site-verification" content="hl_i7ZDiuJqV5zQ7AeZLI8zNbLQ6hrLszh2HhgzGins" />
     <link rel="stylesheet" href="index.css">
 </head>
 
